# CDD-Python-SDK

./: .gitignore  CDD_API_Client.py  Demos.ipynb  MANIFEST.in  QuickStartGuide.ipynb  README.md  client.py  pyproject.toml  setup.py
CDD_Python_API/: CDD_API_Client.py  CDD_Downloader.py  session.json
CDD_Python_API.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cdd/: CDD_Downloader.py  Vault.py  VaultClient.py
cdd/help_docs/: get_batches.txt  get_molecules.txt  get_plates.txt  get_protocols.txt  get_readout_rows.txt  post_molecules.txt
examples/: cdd-run-extraction.py
src/: CDD_API_Client.py  CDD_Downloader.py
src/cdd_python_sdk/: VaultClient.py
src/cdd_python_sdk/help_docs/: get_ELN_entries.txt  get_api_execution_metrics.txt  get_batches.txt  get_collections.txt  get_molecules.txt  get_plates.txt  get_protocol_data.txt  get_readout_rows.txt  get_runs.txt  get_sample_inventory.txt  get_saved_searches.txt  get_users.txt  post_batch_move_job.txt  post_batches.txt  post_inventory_samples.txt  put_eln_entries.txt  put_molecules.txt  put_plates.txt
